Fixes for mobile, and for the diffrent templates for container issues Fixed button overflow

--- a/assets/css/scss/_global_overrides.scss
+++ b/assets/css/scss/_global_overrides.scss
@@ -1,3 +1,11 @@
 body.search-results main {
   background: initial;
 }
+
+.text-overflow {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: inline-block;
+  max-width: 100%;
+}
